src/renderer/components/playlist-info/playlist-info.scss
.playListThumbnail {
  inline-size: 100%;
}

.playlistThumbnail .firstVideoLink {
  cursor: pointer;
}

.playlistThumbnail img {
  inline-size: 100%;
  // Ensure placeholder image displayed at same aspect ratio as most other images
  aspect-ratio: 16/9;

  @media only screen and (width <= 800px) {
    display: none;
  }
}

.playlistStats {
  font-size: 15px;
}

.playlistStats p {
  color: var(--secondary-text-color);
  margin: 0;
}

.playlistTitle {
  margin-block-end: 0.1em;
  word-break: break-word;
  max-block-size: 20vh;
  overflow-y: scroll;
}

.playlistDescription {
  max-block-size: 20vh;
  overflow-y: auto;
  white-space: break-spaces;
  margin-inline: auto;
  word-break: break-word;
}

.isSideNavOpen {
  .playlistTitle,
  .playlistDescription {
    @media only screen and (width >= 1162px) {
      /* Approximate max size before untruncated title starts breaking list view desktop interface with side nav open */
      max-inline-size: 28vw;
    }
  }
}

.playlistChannel {
  align-items: center;
  color: inherit;
  display: flex;
  gap: 8px;
  block-size: 40px;
  text-decoration: none;
}

.channelThumbnail {
  border-radius: 200px;
  float: var(--float-left-ltr-rtl-value);
  inline-size: 40px;
}

.channelName {
  font-size: 15px;
  margin: 0;
  word-break: break-all;
}

.channelShareWrapper {
  column-gap: 8px;
  display: grid;
  grid-template-columns: auto minmax(min-content, 1fr);
  position: sticky;
  inset-block-end: -20px;
  background-color: var(--card-bg-color);
  padding-block: 5px;
}

.playlistOptions {
  display: flex;
  flex-wrap: wrap;
  gap: 8px;
  justify-content: center;
}

.searchInputsRow {
  margin-block-start: 8px;
}

.top-bar {
  .playlistThumbnail,
  .playlistInfoSeparator {
    display: none;
  }

  .playlistStats {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
  }

  .playlistTitle {
    margin-block-start: 0.2em;
  }

  .playlistTitle,
  .playlistDescription {
    text-align: center;

    /* Approximate max size before untruncated title could break grid view interface */
    max-inline-size: 50vw;
  }

  .app:not(.isSideNavOpen) .playlistTitle,
  .app:not(.isSideNavOpen) .playlistDescription {
    inline-size: 100%;
    margin-block: 8px;
    max-inline-size: 70vw;

    @media only screen and (width >= 910px) {
      /* Approximate max size before untruncated title starts breaking list view desktop interface */
      max-inline-size: 28vw;
    }
  }

  .descriptionInput {
    margin-block-start: 8px;
  }

  .playlistOptionsAndSearch {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
  }

  .channelShareWrapper,
  .searchInputsRow,
  .playlistStats {
    column-gap: 0;
    inline-size: 100%;
  }

  .inputElement {
    inline-size: 100%;
  }
}

@media only screen and (width <= 680px) {
  .playlistTitle,
  .playlistDescription {
    max-inline-size: 100%;
  }
}



@media only screen and (width <= 1250px) {
  :deep(.sharePlaylistIcon .iconDropdown) {
    inset-inline: auto;
  }
}

